--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <version>2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
